--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
 
     <div class="header-img">
-      <img src="log.jpg" alt="logo">
+      <img src="images/log.jpg" alt="logo">
     </div>
     <div class="header-text">
       <h1>VIJAY BABU</h1>
