--- a/index.html
+++ b/index.html
@@ -44,63 +44,66 @@
       <!--heading tag here-->
       <h3>Quotes ::</h3>
       <!--braek tag here no closing need-->
+      <br> "Me and my buddies are all like brothers. So it's okay for us to say 'I love you' or whatever. It's always cool. I
+      think that comes from my dad. That's just the way he always was."
       <br>
-      <p>"Me and my buddies are all like brothers. So it's okay for us to say 'I love you' or whatever. It's always cool. I
-        think that comes from my dad. That's just the way he always was."</p>
-      <p>"Sometimes being a friend means mastering the art of timing. There is a time for silence. A time to let go and allow
-        people to hurl themselves into their own destiny. And a time to prepare to pick up the pieces when it's all over."</p>
-      <p>"Friendship is the hardest thing in the world to explain. It's not something you learn in school. But if you haven't
-        learned the meaning of friendship, you really haven't learned anything in your life."</p>
-      <p>"A friend is someone who knows all about you and still loves you."</p>
+      <br> "Sometimes being a friend means mastering the art of timing. There is a time for silence. A time to let go and allow
+      people to hurl themselves into their own destiny. And a time to prepare to pick up the pieces when it's all over."
+      <br>
+      <br> "Friendship is the hardest thing in the world to explain. It's not something you learn in school. But if you haven't
+      learned the meaning of friendship, you really haven't learned anything in your life."
+      <br>
+      <br> "A friend is someone who knows all about you and still loves you."
+      <br>
+      <br>
     </div>
     <!--Bootstrap used here-->
     <div class="container">
       <div class="row">
 
-        <div class="card col-md-4" style="width:400px">
+        <div class="card col-md-4">
           <!--Img tag here-->
           <img class="card-img-top" src="images/sriram.jpeg" alt="sriram">
           <div class="card-body">
             <h4 class="card-title">Sri Ram Prasad</h4>
             <p class="card-text">Sri Ram is an CEO of 'Facebook' and good Programmer.We call him 'Bavamardhi'.</p>
-
-            <a href="https://www.facebook.com/sriram.prasad.1466" class="btn btn-primary">See Profile</a>
+            <a href="https://www.facebook.com/sriram.prasad.1466" target="_blank" class="btn btn-primary">See Profile</a>
           </div>
         </div>
 
-        <div class="card col-md-4" style="width:400px">
+        <div class="card col-md-4">
           <img class="card-img-top" src="images/vijju.jpeg" alt="vijju">
           <div class="card-body">
             <h4 class="card-title">Vijay BABU</h4>
             <p class="card-text">Vijay is an CEO of 'Twitter' and Android developer.We call him 'Vijju'.</p>
-            <a href="https://www.facebook.com/vijaybabukandiboina" class="btn btn-primary">See Profile</a>
+            <a href="https://www.facebook.com/vijaybabukandiboina" target="_blank" class="btn btn-primary">See Profile</a>
           </div>
         </div>
 
-        <div class="card col-md-4" style="width:400px">
+        <div class="card col-md-4">
           <img class="card-img-top" src="images/eissah.jpeg" alt="eissah">
           <div class="card-body">
             <h4 class="card-title">Eissah</h4>
             <p class="card-text">Eissah is an CEO of 'WhatsApp'.We call him 'Eha'.</p>
-            <a href="https://www.facebook.com/md.eissah" class="btn btn-primary">See Profile</a>
+            <a href="https://www.facebook.com/md.eissah" target="_blank" class="btn btn-primary">See Profile</a>
           </div>
         </div>
 
-        <div class="card col-md-4" style="width:400px">
+        <div class="card col-md-4">
           <img class="card-img-top" src="images/giri.jpeg" alt="giri">
           <div class="card-body">
             <h4 class="card-title">Girish</h4>
             <p class="card-text">Giri Harish is an CEO of 'Amazon'.We call him 'Giri Ghost'.</p>
-            <a href="https://www.facebook.com/profile.php?id=100009089688283" class="btn btn-primary">See Profile</a>
+            <a href="https://www.facebook.com/profile.php?id=100009089688283" target="_blank" class="btn btn-primary">See Profile</a>
           </div>
         </div>
 
-        <div class="card col-md-4" style="width:400px">
+        <div class="card col-md-4">
           <img class="card-img-top" src="images/dp.jpeg" alt="dp">
           <div class="card-body">
             <h4 class="card-title">Durga Prasad</h4>
             <p class="card-text">Durga Prasad is an CEO of 'Flipkart' and good dancer.We call him 'DP'.</p>
-            <a href="https://www.facebook.com/durga.reddy.9887" class="btn btn-primary btnback">See Profile</a>
+            <a href="https://www.facebook.com/durga.reddy.9887" target="_blank" class="btn btn-primary btnback">See Profile</a>
           </div>
         </div>
 
@@ -109,4 +112,5 @@
   </main>
 </body>
 <!--add js src here if needed, As js file should load after body loaded-->
+
 </html>
