--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
       </div>
     </div>
   </main>
+  <footer>
+    <p>Copyright &copy; &nbsp vijju3335 &nbsp #2018</p>
+  </footer>
 </body>
 <!--add js src here if needed, As js file should load after body loaded-->
 
